css file is not in the right folder
fix - css file is not in the right folder

--- a/mineral_catalog/minerals/templates/minerals/index.html
+++ b/mineral_catalog/minerals/templates/minerals/index.html
@@ -1,7 +1,17 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  {% for mineral in minerals %}
-    <h3><a href="{% url 'minerals:detail' pk=mineral.pk %}">{{ mineral.name }}</a></h3>
-  {% endfor %}
+
+<div class="bounds">
+  <div class="grid-100">
+    <ul class="minerals__container">
+      {% for mineral in minerals %}
+        <li class="minerals__item">
+          <a href="{% url 'minerals:detail' pk=mineral.pk %}">{{ mineral.name }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
+</div>
+
 {% endblock %}
