--- a/mineral_catalog/templates/layout.html
+++ b/mineral_catalog/templates/layout.html
@@ -1,15 +1,12 @@
 
 {% load static from staticfiles %}
 <!doctype html>
-
 <html>
     <head>
         <title>Minerals Catalog</title>
-        <link rel="stylesheet" href="{% static 'css/layout.css' %}">
+        <link rel="stylesheet" href="{% static 'css/global.css' %}">
     </head>
     <body>
-      <div class="bounds">
         {% block content %}{% endblock %}
-      </div>
     </body>
 </html>
