--- a/mineral_catalog/templates/layout.html
+++ b/mineral_catalog/templates/layout.html
@@ -1,4 +1,5 @@
 {% load static from staticfiles %}
+
 <!doctype html>
 <html>
     <head>
@@ -7,5 +8,8 @@
     </head>
     <body>
         {% block content %}{% endblock %}
+        <div class="minerals__random">
+          <a class="minerals__anchor" href="{% url 'minerals:random' %}">Show random mineral</a>
+        </div>
     </body>
 </html>
