link on home page
add a link on home page

--- a/mineral_catalog/templates/home.html
+++ b/mineral_catalog/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1> good morning!!! </h1>
+  <a class="minerals__anchor" href="{% url 'minerals:list' %}"> showining the list of mineral</a>
 {% endblock%}
